# adk-agents

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  pyproject.toml
deploy/systemd/: adk-agents.service  journald-adk-agents.conf
docs/: build-ready-specification.md  target-host-bootstrap.md
docs/research/: adk-application-boundary-and-specialist-contracts.md  adk-setup-against-current-guidance.md  github-polling-and-task-board-integration-protocol.md  isolated-coding-review-pr-workflow.md  local-llm-runtime-discovery-and-model-routing.md  local-runtime-bootstrap-execution-report.md  target-host-model-candidate-screen.md  versioned-operational-record-and-evidence-schemas.md
scripts/: bootstrap-local-runtimes.sh
src/adk_agents/: __init__.py  adk_application.py  board_policy.py  coding.py  config.py  contracts.py  control_intake.py  evidence.py  github_project_reader.py  ids.py  integration.py  manager.py  operational_record.py  operations.py  ready_workflows.py  (+16 more)
tests/: test_adk_application.py  test_board_policy.py  test_coding.py  test_config.py  test_control_intake.py  test_evidence.py  test_github_project_reader.py  test_integrated_workflow.py  test_manager.py  test_manager_research_admission.py  test_operational_record.py  test_polling_lease.py  test_ready_specialists.py  test_ready_workflows.py  test_research.py  test_research_admission.py  test_retention.py  test_review_gate.py  test_routing.py  test_service.py  test_service_loop.py  test_service_policy_files.py  test_story_intake.py  test_task_board.py  test_task_format.py  test_worktree_authority.py
