[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-agents"
version = "0.1.0"
description = "Local ADK coding-agent system"
requires-python = ">=3.10"
dependencies = [
  "google-adk~=2.5.0",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
